fix some notifications not showing

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -169,5 +169,5 @@ ul.header li a {
 }
 
 .n400 { background: #ffecec; border-color: #fad9d7; }
-.n200 { background: #e9ffd9; border-color: #D1FAB6;  display: none;}
-.n { background: #e9ffd9; border-color: #D1FAB6; display: none; }
+.n200 { background: #e9ffd9; border-color: #D1FAB6; }
+.n { background: #e9ffd9; border-color: #D1FAB6; }
